I think PrintGCDateStamps is much more convenient thatn PrintGCTimeStamps